# planetary-stack

./: .gitattributes  .gitignore  AGENTS.md  AGENT_LOG.md  CAPABILITY_LEDGER.md  FINISH_CHECKLIST.md  LAUNCH_CHECKLIST.md  LICENSES.md  MEMORY_BLUEPRINT.md  MIGRATION_CHECKLIST.md  Makefile  README.md  UNISYNC_RESOURCE_MERGER_PLAN.md  VERSION  backend.py  build_synthesus_iso.sh  desktop_app.py  flash_usb.sh  install.sh  install_planetary_os_kiosk.sh  pyproject.toml  styles.css  synthesus_phase3_and_forge.patch  test_foreman.py  workspace.toml
.emergent/: emergent.yml
Desktop_Environment/: index.html  script.js  styles.css  synthesus_native_shell.py
Synthesus_Kernel/: boot.s  grub.cfg  kernel.cpp
app/: build.gradle
artifacts/: faiss.index  manifest.json
contracts/: __init__.py  requirements.txt
desktop/: accounts.py  index.html  pro.py  script.js  styles.css  synthesus_native_shell.py  terminal_server.py
docs/: ARCHITECTURE.md  BOOTSTRAP.md  BUILD.md  CANONICALIZATION_AUDIT.md  DATA_MODEL.md  OPTIONAL_NEURAL.md  PROVENANCE.md  REPOSITORY_MAP.md  SITE_SEO.md  SOURCES.md  ULTRA_ARCHIVE.md  VALIDATION.md
knowledge/knowledge-cloud/: pyproject.toml
knowledge/knowledge-cloud/docs/: BUILD.md  DATA_MODEL.md
knowledge/knowledge-cloud/manifests/: source_manifest.json
knowledge/knowledge-cloud/sources/: huggingface.yaml
knowledge/knowledge-cloud/synthesus_knowledge_cloud/: json_stream.py  manifest.py  provenance.py
knowledge/knowledge-cloud/tests/: test_build.py  test_cli.py
manifests/: source_manifest.json
memory/: PRD.md
runtime/: requirements.txt  run_runtime.sh
scripts/: bootstrap.sh  component-status.sh  doctor.sh  (+8 more)
(+390 files in other folders)
